# fastapi-async-practice

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 0c451ef318cc_initial_revision.py  0dff999ffd0e_timezone_enable.py  d02552336913_fixes.py  d8acfe04e0bd_users_otp.py  e915b8341670_username_to_email.py
src/app/: main.py  run_arq.py
src/app/core/: celery_config.py  config.py  connect_manager.py  decorators.py  dependencies.py  enums.py  exceptions.py  exceptions_handlers.py  redis_settings.py  security.py  worker.py  worker_dependencies.py
src/app/endpoints/: __init__.py  auth.py  exceptions_handlers.py  tasks.py  users.py
src/app/repositories/: __init__.py  tasks.py  users.py
src/app/schemas/: __init__.py  tasks.py  token.py  users.py
src/app/services/: __init__.py  tasks.py  user_service.py  users.py
src/app/tasks/: __init__.py  asleep.py  fetch.py  send_email.py
src/app/templates/: otp_email.html
src/core/: log_config.py
src/fastapi-async-app/: main.py
src/infrastructure/postgresql/: db_config.py  db_engine.py
src/infrastructure/postgresql/models/: __init__.py  task.py  users.py
