[project]
name = "fastapi-async-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "celery-stubs>=0.1.3",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]


[project.scripts]
fastapi-async = "src.app.main:main"

#[build-system]
#requires = ["uv_build>=0.9.21,<0.10.0"]
#build-backend = "uv_build"

# Formatters and Linting
[tool.basedpyright]
typeCheckingMode = "strict"
exclude = ["**/.venv", "**/__pycache__", "**/node_modules"]

[tool.ruff]
line-length = 100

#[tool.ruff.format]
#docstring-code-format = true
#docstring-code-line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PIE", "PERF", "PTH", "RUF"]

ignore = [
  "E501",   # line-length 
#  "F401",   # unused imports 
  "F841",   # unused local variables
  "F821",   # undefined name 
]

# Testing
#[tool.pytest.ini_options]
#addopts = "-q --cov=albot --cov-report=term-missing"

#[tool.coverage.run]
#source = ["albot"]  # or ["src"]
#branch = true

#[tool.coverage.report]
#show_missing = true
#skip_empty = false
